Sonic's 2024 DAS feature

--- a/adu/2024-12/adu-2024-12-31.md
+++ b/adu/2024-12/adu-2024-12-31.md
@@ -17,7 +17,7 @@
 Jan 11-12 | Cambridge, Massachusetts, USA | [Twitch](https://www.twitch.tv/classictetris) | [Discord](https://discord.gg/mBVReaxE9m)
 
 **WAKU WAKU NES TETRIS FESTIVAL**
-Jan 18-19 | Tokyo, Japan | [Twitch](https://twitch.tv/classictetris) | [Twitter](https://x.com/waku_tet)
+Jan 18-19 | Tokyo, Japan | [Twitch](https://twitch.tv/classictetris) | [Twitter](https://x.com/waku_tet) | [Discord](https://discord.gg/KA3uPsxn)
 
 **CTWC GENESIS**
 Feb 14-16 | San Jose, California, USA | [Twitch](https://www.twitch.tv/classictetris) | [Discord](https://discord.gg/mBVReaxE9m)
